src/test/ui/borrowck/borrowck-issue-2657-2.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-issue-2657-2.rs:7:18
   |
LL |         let _b = *y;
   |                  ^^
   |                  |
   |                  cannot move out of borrowed content
   |                  help: consider removing the `*`: `y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
